[package]
name = "ucp_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.6"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = "1.0.219"
tokio = { version = "1.45.0", features = ["time"] }
pelican_ui = {path = "../pelican_ui" }
pelican_ui_std = { path = "../pelican_ui_std" }
include_dir = { version = "0.7.4", features = ["glob"] }


[lib]
name="main"
crate-type=["staticlib", "cdylib", "rlib"]
