[package]
name = "ucp_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.6"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = "1.0.219"
tokio = { version = "1.45.0", features = ["time"] }
include_dir = { version = "0.7.4", features = ["glob"] }
pelican_ui = "0.1.2"
pelican_ui_std = "0.1.0"


[lib]
name="main"
crate-type=["staticlib", "cdylib", "rlib"]
